<resources>
    <string name="app_name" translatable="false">FlyLine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Connect">Connect</string>
    <string name="mac" translatable="false">Mac:</string>
    <string name="name">Name:</string>
    <string name="unknown_device">Unknown device</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning</string>
    <string name="nolocationpermission">no Location Permission</string>
    <string name="hasnearbydevicespermission">has no Nearby Devices Permission</string>
    <string name="fly_time">Fly time</string>
    <string name="sas">SAS</string>
    <string name="CalibrationStarted">Calibration is started</string>
    <string name="voltage">Voltage</string>
    <string name="maxRpm">max RPM</string>
    <string name="mode">Mode</string>
    <string name="midRpm">Mid RPM</string>
    <string name="siy">SIY</string>
    <string name="Error">Error</string>
    <string name="min_rpm">Min RPM</string>
    <string name="Error_Change_Password">-</string>
    <string name="New_Password_Only_Numbers">-</string>
    <string name="Only_4_numbers">-</string>
    <string name="Old_pass_not_new_pass">-</string>
    <string name="connected_to_device">Connected to device</string>
    <string name="error_to_connect">error to connect</string>
    <string name="services_discovered">services discovered</string>
    <string name="wrong_password">Wrong password</string>
    <string name="bluetooth_is_disabled">Bluetooth is disabled</string>
    <string name="location_is_disabled">Location is disabled</string>
    <string name="main_menu">Main Menu</string>
    <string name="change_password">Change password</string>
    <string name="calibration">Calibration</string>
    <string name="kp_PID">ПИД Kp</string>
    <string name="ki_PID">ПИД Ki</string>
    <string name="kd_PID">ПИД Kd</string>
    <string name="smooth_engine_start">-</string>
    <string name="Operating_mode">-</string>
    <string name="SAS_sensor_area">-</string>
    <string name="Time_before_start">-</string>
    <string name="signal_interval">-</string>
    <string name="Vibrate_signal_until_the_finish">-</string>
    <string name="Sensor_error">-</string>
    <string name="Set_speed_error">Ошибка заданных оборотов</string>
    <string name="Smooth_engine_stop">-</string>
    <string name="pwm_minimum">-</string>
    <string name="maximum_rpm">Maximum RPM</string>
    <string name="middle_rpm">Middle RPM</string>
    <string name="minimum_rpm">Minimum RPM</string>
    <string name="rpm">RPM</string>
    <string name="SIY_sensor_area">-</string>
    <string name="Sensor_parameters">-</string>
    <string name="pwm_maximum">-</string>
    <string name="time">Time</string>
    <string name="pid_settings">PID settings</string>
    <string name="Speed_control_error">-</string>
    <string name="time_disable">Time to end</string>
    <string name="accident">accident</string>
    <string name="connection">Connection</string>
    <string name="settings">Configuration</string>
    <string name="manual">Manual</string>
    <string name="about">About</string>
    <string name="calibration_info">To activate calibration mode, press and hold the button.  Start the timer by turning the switch to the \"ON\" position.  After takeoff, keep the model in level flight for 20 seconds.  After 20 seconds, the flight can continue, the timer will work with the new calibration data.  After stopping the engine and turning the switch to the \"OFF\" position calibration data is stored in the timer memory.</string>
    <string name="Calibration">Calibration</string>
    <string name="fragment_connection">Connection</string>
    <string name="fragment_password">Password</string>
</resources>